@@ -1,5 +1,6 @@
 package ru.otus.levina.hw05.tests;
 
+import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -9,11 +10,11 @@ import ru.otus.levina.hw05.domain.Author;
 import ru.otus.levina.hw05.repository.AuthorDao;
 import ru.otus.levina.hw05.repository.AuthorDaoImpl;
 
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+@Slf4j
 @DisplayName("AuthorDaoTest")
 @JdbcTest
 @Import(AuthorDaoImpl.class)
@@ -44,9 +45,51 @@ public class AuthorDaoTest {
     @Test
     void testGetAllAuthors() {
         List<Author> actualAuthors = authorDao.getAll();
-        List<Author> expectedAuthors = Arrays.asList(new Author[]{
+        List<Author> expectedAuthors = List.of(
                 new Author(1002, "Гомер", null, null),
-                new Author(1001, "Александр", "Пушкин", "Сергеевич")});
+                new Author(1001, "Александр", "Пушкин", "Сергеевич"),
+                new Author(1003, "a1003", null, null),
+                new Author(1004, "a1004", null, null),
+                new Author(1005, "a1005", null, null));
+        assertEquals(expectedAuthors.size(), actualAuthors.size());
+        assertEquals(expectedAuthors.stream().filter(actualAuthors::contains).count(), expectedAuthors.size());
+    }
+
+    @DisplayName("get authors by id list")
+    @Test
+    void testGetAuthorsByIdList() {
+        List<Author> actualAuthors = authorDao.getByIdList(List.of(1002L, 1001L));
+        List<Author> expectedAuthors = List.of(
+                new Author(1002, "Гомер", null, null),
+                new Author(1001, "Александр", "Пушкин", "Сергеевич"));
+        assertEquals(expectedAuthors.size(), actualAuthors.size());
+        assertEquals(expectedAuthors.stream().filter(actualAuthors::contains).count(), expectedAuthors.size());
+    }
+
+    @DisplayName("get authors by book id")
+    @Test
+    void testGetAuthorsByBookId() {
+        List<Author> actualAuthors = authorDao.getByBookId(1001L);
+        List<Author> expectedAuthors = List.of(
+                new Author(1001, "Александр", "Пушкин", "Сергеевич"));
+        assertEquals(expectedAuthors.size(), actualAuthors.size());
+        assertEquals(expectedAuthors.stream().filter(actualAuthors::contains).count(), expectedAuthors.size());
+    }
+
+
+    @DisplayName("get authors by book id list")
+    @Test
+    void testGetAuthorsByBookIdList() {
+        List<Long> bookIds = List.of(1003L, 1004L, 1005L);
+        Map<Long, List<Author>> actualAuthors = authorDao.getByBookIdList(bookIds);
+        actualAuthors.entrySet().forEach(e -> log.info("entry: {}", e));
+        Map<Long, List<Author>> expectedAuthors = new HashMap<>();
+        bookIds.forEach(id -> expectedAuthors.putIfAbsent(id, new ArrayList<>()));
+        expectedAuthors.get(1003L).add(new Author(1003, "a1003", null, null));
+        expectedAuthors.get(1003L).add(new Author(1004, "a1004", null, null));
+        expectedAuthors.get(1004L).add(new Author(1004, "a1004", null, null));
+        expectedAuthors.get(1004L).add(new Author(1005, "a1005", null, null));
+        expectedAuthors.get(1005L).add(new Author(1003, "a1003", null, null));
         assertEquals(expectedAuthors, actualAuthors);
     }
 
@@ -54,7 +97,7 @@ public class AuthorDaoTest {
     @Test
     void testAddAuthor() {
         Author expectedAuthor = new Author("Fn1", "Ln1", "Mn1");
-        Long id = authorDao.insert(expectedAuthor).map(a -> a.getId()).orElseGet(null);
+        Long id = authorDao.insert(expectedAuthor).map(Author::getId).orElse(null);
         assertNotNull(id);
         Author actualAuthor = authorDao.getById(id).orElse(null);
         assertEquals(expectedAuthor, actualAuthor);
@@ -64,7 +107,7 @@ public class AuthorDaoTest {
     @Test
     void testDeleteAuthor() {
         Author expectedAuthor = new Author("Fn2", "Ln2", "Mn2");
-        Long id = authorDao.insert(expectedAuthor).map(a -> a.getId()).orElseGet(null);
+        Long id = authorDao.insert(expectedAuthor).map(Author::getId).orElse(null);
         assertNotNull(id);
         Author actualAuthor = authorDao.getById(id).orElse(null);
         assertEquals(expectedAuthor, actualAuthor);
@@ -77,7 +120,7 @@ public class AuthorDaoTest {
     @Test
     void testUpdateAuthor() {
         Author origAuthor = new Author("Fn3", "Ln3", "Mn3");
-        Long id = authorDao.insert(origAuthor).map(a -> a.getId()).orElseGet(null);
+        Long id = authorDao.insert(origAuthor).map(Author::getId).orElse(null);
         assertNotNull(id);
         Author actualAuthor = authorDao.getById(id).orElse(null);
         assertEquals(origAuthor, actualAuthor);
