@@ -1,19 +1,20 @@
 package ru.otus.levina.hw05.tests;
 
+import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.JdbcTest;
 import org.springframework.context.annotation.Import;
 import ru.otus.levina.hw05.domain.Genre;
-import ru.otus.levina.hw05.repository.GenreDaoImpl;
 import ru.otus.levina.hw05.repository.GenreDao;
+import ru.otus.levina.hw05.repository.GenreDaoImpl;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+@Slf4j
 @DisplayName("GenreDaoTest")
 @JdbcTest
 @Import(GenreDaoImpl.class)
@@ -44,17 +45,42 @@ public class GenreDaoTest {
     @Test
     void testGetAllGenres() {
         List<Genre> actualgenres = genreDao.getAll();
-        List<Genre> expectedgenres = Arrays.asList(new Genre[]{
+        List<Genre> expectedgenres = List.of(
                 new Genre(1001, "Античная литература"),
-                new Genre(1002, "Русская классика")});
-        assertEquals(expectedgenres, actualgenres);
+                new Genre(1002, "Русская классика"),
+                new Genre(1003, "g1003"),
+                new Genre(1004, "g1004")
+        );
+        assertEquals(expectedgenres.size(), actualgenres.size());
+        assertEquals(expectedgenres.stream().filter(actualgenres::contains).count(), expectedgenres.size());
+    }
+
+    @DisplayName("get genres by id list")
+    @Test
+    void testGetGenresByIdList() {
+        List<Genre> actualgenres = genreDao.getByIdList(List.of(1001L, 1002L));
+        List<Genre> expectedgenres = List.of(
+                new Genre(1001, "Античная литература"),
+                new Genre(1002, "Русская классика"));
+        assertEquals(expectedgenres.size(), actualgenres.size());
+        assertEquals(expectedgenres.stream().filter(actualgenres::contains).count(), expectedgenres.size());
+    }
+
+    @DisplayName("get genres by book id")
+    @Test
+    void testGetGenresByBookId() {
+        List<Genre> actualgenres = genreDao.getByBookId(1001);
+        List<Genre> expectedgenres = List.of(
+                new Genre(1002, "Русская классика"));
+        assertEquals(expectedgenres.size(), actualgenres.size());
+        assertEquals(expectedgenres.stream().filter(actualgenres::contains).count(), expectedgenres.size());
     }
 
     @DisplayName("add an genre")
     @Test
     void testAddGenre() {
         Genre expectedgenre = new Genre("G1");
-        Long id = genreDao.insert(expectedgenre).map(a -> a.getId()).orElseGet(null);
+        Long id = genreDao.insert(expectedgenre).map(Genre::getId).orElse(null);
         assertNotNull(id);
         Genre actualgenre = genreDao.getById(id).orElse(null);
         assertEquals(expectedgenre, actualgenre);
@@ -65,7 +91,7 @@ public class GenreDaoTest {
     @Test
     void testDeleteGenre() {
         Genre expectedgenre = new Genre("G2");
-        Long id = genreDao.insert(expectedgenre).map(a -> a.getId()).orElseGet(null);
+        Long id = genreDao.insert(expectedgenre).map(Genre::getId).orElse(null);
         assertNotNull(id);
         Genre actualgenre = genreDao.getById(id).orElse(null);
         assertEquals(expectedgenre, actualgenre);
@@ -78,7 +104,7 @@ public class GenreDaoTest {
     @Test
     void testUpdateGenre() {
         Genre origgenre = new Genre("G3");
-        Long id = genreDao.insert(origgenre).map(a -> a.getId()).orElseGet(null);
+        Long id = genreDao.insert(origgenre).map(Genre::getId).orElse(null);
         assertNotNull(id);
         Genre actualgenre = genreDao.getById(id).orElse(null);
         assertEquals(origgenre, actualgenre);
